Some work on example 01

--- a/docs/src/examples/ex01.md
+++ b/docs/src/examples/ex01.md
@@ -1,15 +1,17 @@
-# Interactive Aircraft Simulation
+# Interactive Simulation
 
 This example shows how to set up and run an interactive aircraft simulation. You will be able to
-control the simulation through the built-in GUI and, optionally, use the free X-Plane 12 demo for 3D
+control it through the built-in GUI and, optionally, use the free X-Plane 12 demo for 3D
 visualization.
 
-!!! warning "Initializing Julia for Multithreading"
+!!! warning "Configuring Julia for Multithreading"
 
-    When running an interactive simulation, ```Flight.jl``` uses multithreading to concurrently handle the simulation loop, the built-in GUI
-    and any attached I/O devices. Therefore, to work through this example, you will need to start Julia
-    with multiple threads enabled. You can learn how to do this in the [manual](https://docs.julialang.org/en/v1/manual/multi-threading/), but if you are using the
-    Julia extension for VS Code, the easiest way is to add an entry like this to your ```settings.json```:
+    When running an interactive simulation, ```Flight.jl``` uses multithreading to concurrently handle
+    the simulation loop, the built-in GUI and any attached I/O devices. Therefore, to work through this
+    example you will need to start Julia with multiple threads enabled. You can find out how in
+    the [manual](https://docs.julialang.org/en/v1/manual/multi-threading/). If you are using the
+    Julia extension for VS Code, the easiest way is to add an entry like this to your
+    ```settings.json``` (the ```auto``` setting will work well for most CPUs and use cases):
 
     ```json
     "julia.additionalArgs": [
@@ -17,16 +19,65 @@ visualization.
     ],
     ```
 
-    The ```auto``` setting will work well for most CPUs and use cases.
+### Setting Up the Simulation
 
 ```@repl
 using Flight
 ```
 
+Create aircraft. SystemDescriptor. We are not into the details in this example. Explain what
+Cessna172Xv1 is
+
+Explain what XPlane12Output does.
+
+Salzburg is one of the areas included with the X-Plane 12 demo, so we will use that.
+
+The ```FlightCore.Joysticks``` module provides a joystick interface layer via [SDL2_jll]
+(https://github.com/JuliaBinaryWrappers/SDL2_jll.jl). Currently, Thrustmaster's T.16000M is the only
+supported model. Adding support for other joystick models is relatively straightforward, but we will
+not be getting into it here. If you happen to have a T.16000M at your disposal, you can
+plug it in and do the following:
+
+Otherwise, don't worry. In this example, the SAS and autopilot modes will do most of the flying for
+us, so you can easily control the aircraft through the GUI.
+
+!!! note "X-Plane UDP Settings"
+
+    By default, ```XPlane12Output``` assumes X-Plane 12 is running on your local machine and listening
+    on X-Plane's default port (49000). If this is not the case, you should provide the appropriate IP address and
+    port via keyword arguments. For example:
+
+    ```@repl
+    using Flight
+    using Sockets #brings IPv4 into scope
+    xp = XPlane12Output(address = IPv4("192.168.1.2"), port = 49001)
+    ```
+
+
+
 ### Setting Up X-Plane 12
 
-!!! note "Running Without X-Plane"
+!!! note "Working Without X-Plane"
 
-    If you can't run X-Plane 12, everything will still work fine, but your visuals will be limited to the built-in GUI.
+    If you can't run X-Plane 12, you may skip this section. Everything will still work fine, but your
+    visuals will be limited to the built-in GUI.
+
+1. Download and install the [X-Plane 12 demo](https://www.x-plane.com/desktop/try-it/). Of course,
+   if you happen to have the full version, you can use it instead.
+
+Choose suitable settings according to your machine
+
+Make sure networking is enabled. Check the listening port. If you have it set to some other value,
+note it for later.
+
+Screenshots!
+
+Tip: Monitors: If two, second monitor. If one, run windowed. To make room for both the built in GUI
+and Plane you can set up Xplane to run in windowed mode, or on a second monitor if you have one.
+
+Set up a new flight at Salzburg's runway ()... with a Cessna 172 as. Don't start the flight just yet,
+because the demo is time-limited to 15 minutes. After that, you will get a pop-up and you will need
+to restart X-Plane to remove it.
+
 
 <!-- Along the way, we will briefly introduce/touch upon some key concepts in the Flight.jl package. -->
