More progress on first example

--- a/docs/src/examples/ex01.md
+++ b/docs/src/examples/ex01.md
@@ -8,9 +8,9 @@ visualization.
 
     When running an interactive simulation, ```Flight.jl``` uses multithreading to concurrently handle
     the simulation loop, the built-in GUI and any attached I/O devices. Therefore, to work through this
-    example you will need to start Julia with multiple threads enabled. You can find out how in
-    the [manual](https://docs.julialang.org/en/v1/manual/multi-threading/). If you are using the
-    Julia extension for VS Code, the easiest way is to add an entry like this to your
+    example you will need to start Julia with multiple threads enabled. You can find out how to do this in
+    the [manual](https://docs.julialang.org/en/v1/manual/multi-threading/). However, if you are using the
+    Julia extension for VS Code, the easiest way is to add the following entry to your
     ```settings.json``` (the ```auto``` setting will work well for most CPUs and use cases):
 
     ```json
@@ -19,18 +19,66 @@ visualization.
     ],
     ```
 
+### Configuring X-Plane 12
+
+Install and launch the [X-Plane 12 demo](https://www.x-plane.com/desktop/try-it/). If you happen to
+have the full version, you can use it instead.
+
+!!! note
+
+    If you can't run X-Plane 12 (for instance, if your computer has an Intel integrated graphics chip),
+    you may skip this section. Everything else in the example should still work, but your visuals
+    will be limited to the built-in ```Flight.jl``` GUI.
+
+From the main menu, go to *Settings > Network*. Make sure *Accept incoming connections* is enabled.
+Then, under the *UDP Ports* section, check the *Port we receive on (legacy)* value. The default is
+49000, but you can use a different one if you need to. Finally, if you are running X-Plane on a
+different machine than your Julia session, you should note its IP address.
+
+![X-Plane 12 Network Settings](xp12_network_settings.png)
+
+Unless you have a multi-monitor setup, you will likely want to run X-Plane in windowed mode. This
+will allow you to have it on screen along with the built-in ```Flight.jl``` GUI. To
+enable windowed mode, go to *Settings > Graphics* and, in *Monitor usage*, select *Windowed
+Simulator*.
+
+Screenshot
+
+Go back to the main menu and click on *New Flight*. Select the Cessna Skyhawk and set Salzburg
+(LOWS) as your location. Start the flight.
+
+Screenshot
+
+!!! note
+
+    The X-Plane 12 demo is time-limited to 15 minutes. After that, an on-screen pop-up will appear. If
+    you want it gone, you can restart X-Plane and click on *Resume Last Flight*. You will then need to
+    abort the Julia simulation and run it again (we will see how to do this shortly).
+
+Once X-Plane is done loading, you might want to return to *Settings > Graphics* and experiment with
+the quality settings until you get a reasonable framerate. Unless you have a discrete GPU, you will
+likely need to turn the quality way down. To display the simulation framerate, you can go to
+*Settings > Data Output*, find the *Framerate* entry in the available outputs and click the *Show in
+cockpit* checkbox.
+
+Screenshot
+
+Now we are done configuring X-Plane, let's set up our simulation in Julia.
+
+
 ### Setting Up the Simulation
 
+Let's begin by initializing the package.
 ```@repl
 using Flight
 ```
+
+Salzburg is one of the areas included with the X-Plane 12 demo, so we will use that.
 
 Create aircraft. SystemDescriptor. We are not into the details in this example. Explain what
 Cessna172Xv1 is
 
 Explain what XPlane12Output does.
-
-Salzburg is one of the areas included with the X-Plane 12 demo, so we will use that.
 
 The ```FlightCore.Joysticks``` module provides a joystick interface layer via [SDL2_jll]
 (https://github.com/JuliaBinaryWrappers/SDL2_jll.jl). Currently, Thrustmaster's T.16000M is the only
@@ -43,41 +91,14 @@ us, so you can easily control the aircraft through the GUI.
 
 !!! note "X-Plane UDP Settings"
 
-    By default, ```XPlane12Output``` assumes X-Plane 12 is running on your local machine and listening
-    on X-Plane's default port (49000). If this is not the case, you should provide the appropriate IP address and
-    port via keyword arguments. For example:
+    By default, the ```XPlane12Output``` constructor assumes X-Plane 12 is running on your local machine
+    and listening on port 49000. If this is not the case, you should provide the appropriate IP address
+    and port via keyword arguments. For example:
 
     ```@repl
     using Flight
-    using Sockets #brings IPv4 into scope
+    using Sockets #bring IPv4 into scope
     xp = XPlane12Output(address = IPv4("192.168.1.2"), port = 49001)
     ```
-
-
-
-### Setting Up X-Plane 12
-
-!!! note "Working Without X-Plane"
-
-    If you can't run X-Plane 12, you may skip this section. Everything will still work fine, but your
-    visuals will be limited to the built-in GUI.
-
-1. Download and install the [X-Plane 12 demo](https://www.x-plane.com/desktop/try-it/). Of course,
-   if you happen to have the full version, you can use it instead.
-
-Choose suitable settings according to your machine
-
-Make sure networking is enabled. Check the listening port. If you have it set to some other value,
-note it for later.
-
-Screenshots!
-
-Tip: Monitors: If two, second monitor. If one, run windowed. To make room for both the built in GUI
-and Plane you can set up Xplane to run in windowed mode, or on a second monitor if you have one.
-
-Set up a new flight at Salzburg's runway ()... with a Cessna 172 as. Don't start the flight just yet,
-because the demo is time-limited to 15 minutes. After that, you will get a pop-up and you will need
-to restart X-Plane to remove it.
-
 
 <!-- Along the way, we will briefly introduce/touch upon some key concepts in the Flight.jl package. -->
