Work on real-time simulation example

--- a/docs/src/examples/ex01.md
+++ b/docs/src/examples/ex01.md
@@ -1,4 +1,4 @@
-# Interactive Simulation
+# An Interactive Simulation
 
 This example shows how to set up and run an interactive aircraft simulation. You will be able to
 control it through the built-in GUI and, optionally, use the free X-Plane 12 demo for 3D
@@ -11,7 +11,7 @@ visualization.
     example you will need to start Julia with multiple threads enabled. You can find out how to do this in
     the [manual](https://docs.julialang.org/en/v1/manual/multi-threading/). However, if you are using the
     Julia extension for VS Code, the easiest way is to add the following entry to your
-    ```settings.json``` (the ```auto``` setting will work well for most CPUs and use cases):
+    ```settings.json``` (```auto``` will work well for most modern CPUs):
 
     ```json
     "julia.additionalArgs": [
@@ -21,33 +21,21 @@ visualization.
 
 ### Configuring X-Plane 12
 
-Install and launch the [X-Plane 12 demo](https://www.x-plane.com/desktop/try-it/). If you happen to
-have the full version, you can use it instead.
+Download, install and run the [X-Plane 12 demo](https://www.x-plane.com/desktop/try-it/). Of course,
+if you happen to have the full version, you can run that instead. Since we are only using X-Plane as
+an external visualization tool, we only need to set up a couple of things; for further help, check
+out the [X-Plane 12 manual](https://www.x-plane.com/manuals/desktop/).
 
 !!! note
 
-    If you can't run X-Plane 12 (for instance, if your computer has an Intel integrated graphics chip),
-    you may skip this section. Everything else in the example should still work, but your visuals
-    will be limited to the built-in ```Flight.jl``` GUI.
+    If you can't run X-Plane 12 (which may happen for instance if you have an Intel integrated graphics
+    chip), you can skip this section. Your visuals will be limited to the built-in GUI, but everything
+    else in this example should still work fine.
 
-From the main menu, go to *Settings > Network*. Make sure *Accept incoming connections* is enabled.
-Then, under the *UDP Ports* section, check the *Port we receive on (legacy)* value. The default is
-49000, but you can use a different one if you need to. Finally, if you are running X-Plane on a
-different machine than your Julia session, you should note its IP address.
+From the main menu, click on *New Flight*. Select the Cessna Skyhawk as your aircraft and Salzburg
+(LOWS) as your initial location. Start the flight.
 
-![X-Plane 12 Network Settings](xp12_network_settings.png)
-
-Unless you have a multi-monitor setup, you will likely want to run X-Plane in windowed mode. This
-will allow you to have it on screen along with the built-in ```Flight.jl``` GUI. To
-enable windowed mode, go to *Settings > Graphics* and, in *Monitor usage*, select *Windowed
-Simulator*.
-
-Screenshot
-
-Go back to the main menu and click on *New Flight*. Select the Cessna Skyhawk and set Salzburg
-(LOWS) as your location. Start the flight.
-
-Screenshot
+![X-Plane 12 New Flight Screen](xp12_new_flight.png)
 
 !!! note
 
@@ -55,15 +43,32 @@ Screenshot
     you want it gone, you can restart X-Plane and click on *Resume Last Flight*. You will then need to
     abort the Julia simulation and run it again (we will see how to do this shortly).
 
-Once X-Plane is done loading, you might want to return to *Settings > Graphics* and experiment with
-the quality settings until you get a reasonable framerate. Unless you have a discrete GPU, you will
-likely need to turn the quality way down. To display the simulation framerate, you can go to
-*Settings > Data Output*, find the *Framerate* entry in the available outputs and click the *Show in
-cockpit* checkbox.
+To switch to an external camera, press Shift+4. You can right click and drag to rotate the view and
+use the mouse wheel to zoom in and out. To return to the cockpit camera, press Shift+0. Moving the
+mouse to the top of the screen brings up the menu bar.
 
-Screenshot
+![X-Plane 12 Settings Icon](xp12_settings_icon.png)
 
-Now we are done configuring X-Plane, let's set up our simulation in Julia.
+On the menu bar, click on the *Settings* icon and go the *Network* tab. Make sure *Accept incoming
+connections* is enabled. Then, under the *UDP Ports* section, check the *Port we receive on
+(legacy)* value. The default is 49000, but you can use a different one if you need to. Finally, if
+you are running X-Plane on a different machine than your Julia session, note its IP address.
+
+![X-Plane 12 Network Settings](xp12_network_settings.png)
+
+Now go to the *Graphics* tab. Unless you have a multi-monitor setup, you will probably want to run
+X-Plane in windowed mode. This will allow you to keep it on screen along with the ```Flight.jl```
+built-in GUI. To enable windowed mode, select *Windowed Simulator* in the *Monitor usage* drop-down.
+
+![X-Plane 12 Graphics Settings](xp12_graphics_settings.png)
+
+You might also want to experiment with the quality settings until you achieve a comfortable
+framerate. To display the framerate on screen, go to the *Data Output* tab, find the *Framerate*
+entry in the table and enable the *Show in cockpit* option.
+
+![X-Plane 12 Data Output](xp12_data_output.png)
+
+We are done configuring X-Plane, now let's set up our simulation in Julia.
 
 
 ### Setting Up the Simulation
@@ -73,20 +78,24 @@ Let's begin by initializing the package.
 using Flight
 ```
 
-Salzburg is one of the areas included with the X-Plane 12 demo, so we will use that.
-
 Create aircraft. SystemDescriptor. We are not into the details in this example. Explain what
 Cessna172Xv1 is
 
+Create terrain. Explain why that terrain height. Our simulation's terrain model is independent of
+X-Plane's terrain mesh,
+
+
 Explain what XPlane12Output does.
+
+
 
 The ```FlightCore.Joysticks``` module provides a joystick interface layer via [SDL2_jll]
 (https://github.com/JuliaBinaryWrappers/SDL2_jll.jl). Currently, Thrustmaster's T.16000M is the only
-supported model. Adding support for other joystick models is relatively straightforward, but we will
-not be getting into it here. If you happen to have a T.16000M at your disposal, you can
-plug it in and do the following:
+supported model. Adding support for other joysticks is relatively straightforward, but we are not be
+getting into that in this example. If you happen to have a T.16000M available, you can plug it in
+now and do the following:
 
-Otherwise, don't worry. In this example, the SAS and autopilot modes will do most of the flying for
+Otherwise, don't worry. For this example, the SAS and autopilot modes will do most of the flying for
 us, so you can easily control the aircraft through the GUI.
 
 !!! note "X-Plane UDP Settings"
@@ -100,5 +109,8 @@ us, so you can easily control the aircraft through the GUI.
     using Sockets #bring IPv4 into scope
     xp = XPlane12Output(address = IPv4("192.168.1.2"), port = 49001)
     ```
+
+
+A hypothetical modification of the Cessna 172S variant
 
 <!-- Along the way, we will briefly introduce/touch upon some key concepts in the Flight.jl package. -->
