--- a/docs/src/examples/ex01.md
+++ b/docs/src/examples/ex01.md
@@ -11,7 +11,7 @@ visualization.
     example you will need to start Julia with multiple threads enabled. You can find out how to do this in
     the [manual](https://docs.julialang.org/en/v1/manual/multi-threading/). However, if you are using the
     Julia extension for VS Code, the easiest way is to add the following entry to your
-    ```settings.json``` (```auto``` will work well for most modern CPUs):
+    ```settings.json``` (the ```auto``` setting will work well for most modern CPUs):
 
     ```json
     "julia.additionalArgs": [
@@ -22,15 +22,15 @@ visualization.
 ### Configuring X-Plane 12
 
 Download, install and run the [X-Plane 12 demo](https://www.x-plane.com/desktop/try-it/). Of course,
-if you happen to have the full version, you can run that instead. Since we are only using X-Plane as
+if you happen to have the full version, you can use it instead. Since we are using X-Plane simply as
 an external visualization tool, we only need to set up a couple of things; for further help, check
 out the [X-Plane 12 manual](https://www.x-plane.com/manuals/desktop/).
 
 !!! note
 
-    If you can't run X-Plane 12 (which may happen for instance if you have an Intel integrated graphics
-    chip), you can skip this section. Your visuals will be limited to the built-in GUI, but everything
-    else in this example should still work fine.
+    If you can't run X-Plane 12 (which might happen for instance if you have an Intel integrated
+    graphics chip), you can skip this section. Your visuals will be limited to the built-in GUI, but
+    everything else should still work.
 
 From the main menu, click on *New Flight*. Select the Cessna Skyhawk as your aircraft and Salzburg
 (LOWS) as your initial location. Start the flight.
@@ -39,20 +39,20 @@ From the main menu, click on *New Flight*. Select the Cessna Skyhawk as your air
 
 !!! note
 
-    The X-Plane 12 demo is time-limited to 15 minutes. After that, an on-screen pop-up will appear. If
-    you want it gone, you can restart X-Plane and click on *Resume Last Flight*. You will then need to
+    The X-Plane 12 demo is time-limited to 15 minutes. After that, an on-screen pop-up will appear. To
+    get rid of it, you can restart X-Plane and click on *Resume Last Flight*. You will then need to
     abort the Julia simulation and run it again (we will see how to do this shortly).
 
-To switch to an external camera, press Shift+4. You can right click and drag to rotate the view and
-use the mouse wheel to zoom in and out. To return to the cockpit camera, press Shift+0. Moving the
-mouse to the top of the screen brings up the menu bar.
+To switch to an external camera, press Shift+4. You can right click and drag to rotate the view, and
+use the mouse wheel to zoom in and out. To return to the cockpit camera, press Shift+0.
 
 ![X-Plane 12 Settings Icon](xp12_settings_icon.png)
 
-On the menu bar, click on the *Settings* icon and go the *Network* tab. Make sure *Accept incoming
-connections* is enabled. Then, under the *UDP Ports* section, check the *Port we receive on
-(legacy)* value. The default is 49000, but you can use a different one if you need to. Finally, if
-you are running X-Plane on a different machine than your Julia session, note its IP address.
+Move the mouse to the top of the screen to bring up the menu bar. Click on the *Settings* icon and
+go the *Network* tab. Make sure *Accept incoming connections* is enabled. Then, under the *UDP
+Ports* section, check the *Port we receive on (legacy)* value. The default is 49000, but you can use
+a different one if you need to. Finally, if you are running X-Plane on a different machine than your
+Julia session, note its IP address.
 
 ![X-Plane 12 Network Settings](xp12_network_settings.png)
 
@@ -74,8 +74,29 @@ We are done configuring X-Plane, now let's set up our simulation in Julia.
 ### Setting Up the Simulation
 
 Let's begin by initializing the package.
-```@repl
+```@repl ex01
 using Flight
+```
+
+Our simulated world will consist of an aircraft model, an atmospheric model, and a terrain model.
+
+```@repl ex01
+aircraft = Cessna172Xv1()
+```
+
+This aircraft is a theoretical modification of a Cessna 172S. It replaces the reversible actuation
+system on the base model with a digital fly-by-wire flight control system, which we will leverage in
+this example. The purpose of this aircraft model is mainly educational. It does not aim to
+accurately represent the internals or user interface of any commercial autopilot one might
+encounter in a general aviation aircraft.
+
+```@repl ex01
+atm = SimpleAtmosphere()
+```
+
+```@repl ex01
+p_LOWS15 = Geographic(LatLon(ϕ = deg2rad(47.80433), λ = deg2rad(12.997)), HOrth(427.2))
+trn = HorizontalTerrain(altitude = HOrth(p_LOWS15))
 ```
 
 Create aircraft. SystemDescriptor. We are not into the details in this example. Explain what
@@ -111,6 +132,5 @@ us, so you can easily control the aircraft through the GUI.
     ```
 
 
-A hypothetical modification of the Cessna 172S variant
 
 <!-- Along the way, we will briefly introduce/touch upon some key concepts in the Flight.jl package. -->
