--- a/docs/src/examples/ex01.md
+++ b/docs/src/examples/ex01.md
@@ -86,9 +86,8 @@ aircraft = Cessna172Xv1()
 
 This aircraft is a theoretical modification of a Cessna 172S. It replaces the reversible actuation
 system on the base model with a digital fly-by-wire flight control system, which we will leverage in
-this example. The purpose of this aircraft model is mainly educational. It does not aim to
-accurately represent the internals or user interface of any commercial autopilot one might
-encounter in a general aviation aircraft.
+this example. Note that the purpose of this aircraft model is purely educational; it does not aim to
+simulate the internals or user interface of any specific commercial autopilot.
 
 ```@repl ex01
 atm = SimpleAtmosphere()
