--- a/docs/src/examples/ex01.md
+++ b/docs/src/examples/ex01.md
@@ -1,4 +1,4 @@
-# An Interactive Simulation
+# Interactive Simulation
 
 This example shows how to set up and run an interactive aircraft simulation. You will be able to
 control it through the built-in GUI and, optionally, use the free X-Plane 12 demo for 3D
@@ -22,9 +22,9 @@ visualization.
 ### Configuring X-Plane 12
 
 Download, install and run the [X-Plane 12 demo](https://www.x-plane.com/desktop/try-it/). Of course,
-if you happen to have the full version, you can use it instead. Since we are using X-Plane simply as
-an external visualization tool, we only need to set up a couple of things; for further help, check
-out the [X-Plane 12 manual](https://www.x-plane.com/manuals/desktop/).
+if you happen to have the full version, you can use it instead. Since we will be using X-Plane
+simply as an external visualization tool, we only need to set up a couple of things; for further
+help, check out the [X-Plane 12 manual](https://www.x-plane.com/manuals/desktop/).
 
 !!! note
 
@@ -37,13 +37,7 @@ From the main menu, click on *New Flight*. Select the Cessna Skyhawk as your air
 
 ![X-Plane 12 New Flight Screen](xp12_new_flight.png)
 
-!!! note
-
-    The X-Plane 12 demo is time-limited to 15 minutes. After that, an on-screen pop-up will appear. To
-    get rid of it, you can restart X-Plane and click on *Resume Last Flight*. You will then need to
-    abort the Julia simulation and run it again (we will see how to do this shortly).
-
-To switch to an external camera, press Shift+4. You can right click and drag to rotate the view, and
+To switch to an external camera, press Shift+4. Right click and drag to rotate the view and
 use the mouse wheel to zoom in and out. To return to the cockpit camera, press Shift+0.
 
 ![X-Plane 12 Settings Icon](xp12_settings_icon.png)
@@ -68,17 +62,34 @@ entry in the table and enable the *Show in cockpit* option.
 
 ![X-Plane 12 Data Output](xp12_data_output.png)
 
-We are done configuring X-Plane, now let's set up our simulation in Julia.
+We are done setting up X-Plane, now let's move on to Julia.
 
 
 ### Setting Up the Simulation
 
-Let's begin by initializing the package.
+Installation notes?
+
+Let's begin by initializing the package:
 ```@repl ex01
 using Flight
 ```
 
+Next, we define the 2D location and orthometric elevation for the beginning of Salzburg airport's
+runway 15:
+```@repl ex01
+loc_LOWS15 = LatLon(ϕ = deg2rad(47.80433), λ = deg2rad(12.997))
+h_LOWS15 = HOrth(427.2)
+```
+
+!!! note
+
+    These values will result in X-Plane displaying our aircraft properly positioned at the runway
+    centerline. However, since X-Plane's physics will be disabled during simulation, this is just an
+    illusion. The disconnect between our physics model and X-Plane's visuals will become
+    apparent as soon as the aircraft starts rolling down the runway.
+
 Our simulated world will consist of an aircraft model, an atmospheric model, and a terrain model.
+Let's create each of these:
 
 ```@repl ex01
 aircraft = Cessna172Xv1()
@@ -93,19 +104,32 @@ simulate the internals or user interface of any specific commercial autopilot.
 atm = SimpleAtmosphere()
 ```
 
+This is a simplified, ISA-based atmospheric model with adjustable sea level conditions and wind
+velocity, both of which we will be able to modify during simulation.
+
+
 ```@repl ex01
-p_LOWS15 = Geographic(LatLon(ϕ = deg2rad(47.80433), λ = deg2rad(12.997)), HOrth(427.2))
-trn = HorizontalTerrain(altitude = HOrth(p_LOWS15))
+trn = HorizontalTerrain(altitude = h_LOWS15)
 ```
 
-Create aircraft. SystemDescriptor. We are not into the details in this example. Explain what
-Cessna172Xv1 is
+, and the runway's geographic heading
+ψ_LOWS15 = deg2rad(157)
+```@repl ex01
+atm = SimpleAtmosphere()
+```
 
-Create terrain. Explain why that terrain height. Our simulation's terrain model is independent of
-X-Plane's terrain mesh,
+This is a terrain model with constant orthometric altitude.
+
+
 
 
 Explain what XPlane12Output does.
+
+!!! note
+
+    The X-Plane 12 demo is time-limited to 15 minutes. After that, an on-screen pop-up will appear. To
+    get rid of it, you can restart X-Plane and click on *Resume Last Flight*. You will then need to
+    abort the Julia simulation and run it again (we will see how to do this shortly).
 
 
 
