Another ex01 checkpoint

--- a/docs/src/examples/ex01.md
+++ b/docs/src/examples/ex01.md
@@ -19,12 +19,12 @@ visualization.
     ],
     ```
 
-### Configuring X-Plane 12
+### Setting Up X-Plane 12
 
-Download, install and run the [X-Plane 12 demo](https://www.x-plane.com/desktop/try-it/). Of course,
-if you happen to have the full version, you can use it instead. Since we will be using X-Plane
-simply as an external visualization tool, we only need to set up a couple of things; for further
-help, check out the [X-Plane 12 manual](https://www.x-plane.com/manuals/desktop/).
+Download, install and run the [X-Plane 12 demo](https://www.x-plane.com/desktop/try-it/). If you
+happen to have the full version, you can use it instead. Since we will be using X-Plane simply as an
+external visualization tool, we only need to set up a few things; for further help, check out the
+[X-Plane 12 manual](https://www.x-plane.com/manuals/desktop/).
 
 !!! note
 
@@ -65,95 +65,50 @@ entry in the table and enable the *Show in cockpit* option.
 We are done setting up X-Plane, now let's move on to Julia.
 
 
-### Setting Up the Simulation
-
-Installation notes?
+### Setting Up the ```Flight.jl``` Simulation
 
 Let's begin by initializing the package:
 ```@repl ex01
 using Flight
 ```
 
-Next, we define the 2D location and orthometric elevation for the beginning of Salzburg airport's
-runway 15:
+Next, let's define the 2D location and orthometric elevation for the beginning of Salzburg airport's
+runway 15, and the runway's geographic heading:
 ```@repl ex01
 loc_LOWS15 = LatLon(ϕ = deg2rad(47.80433), λ = deg2rad(12.997))
 h_LOWS15 = HOrth(427.2)
+ψ_LOWS15 = deg2rad(157)
 ```
 
 !!! note
 
-    These values will result in X-Plane displaying our aircraft properly positioned at the runway
-    centerline. However, since X-Plane's physics will be disabled during simulation, this is just an
-    illusion. The disconnect between our physics model and X-Plane's visuals will become
-    apparent as soon as the aircraft starts rolling down the runway.
+    These values will result in X-Plane displaying the aircraft properly positioned and aligned
+    on the runway centerline at the beginning of the simulation. However, this is just for appearance,
+    since our physics model is completely independent from X-Plane's terrain mesh. This disconnect will
+    become apparent as soon as the aircraft starts rolling down the runway.
 
-Our simulated world will consist of an aircraft model, an atmospheric model, and a terrain model.
-Let's create each of these:
+Our simulated world will consist of an aircraft model, an atmospheric model, and a terrain model:
 
 ```@repl ex01
 aircraft = Cessna172Xv1()
+atmosphere = SimpleAtmosphere() #basic ISA-based model with adjustable sea-level conditions and wind velocity
+terrain = HorizontalTerrain(altitude = h_LOWS15) #flat terrain model with constant orthometric elevation
+world = SimpleWorld(aircraft, atmosphere, terrain)
 ```
 
-This aircraft is a theoretical modification of a Cessna 172S. It replaces the reversible actuation
-system on the base model with a digital fly-by-wire flight control system, which we will leverage in
-this example. Note that the purpose of this aircraft model is purely educational; it does not aim to
-simulate the internals or user interface of any specific commercial autopilot.
+The ```Cessna172Xv1``` aircraft is a hypothetical customization of a Cessna 172S. It replaces the
+reversible actuation system on the base model with a digital fly-by-wire flight control system,
+which we will leverage in this example. Note that this aircraft does not aim to replicate the
+internals or interface of any specific real-world autopilot. Its main purpose is simply to
+illustrate how the ```Flight.jl``` framework can be used to design, implement and test advanced control architectures.
 
-```@repl ex01
-atm = SimpleAtmosphere()
+We can now create the simulation itself. We'll specify reasonable values for the integration step
+size and simulation length:
+<!-- ```@repl ex01
+sim = Simulation(world; dt = 0.01, t_end = 1000)
 ```
-
-This is a simplified, ISA-based atmospheric model with adjustable sea level conditions and wind
-velocity, both of which we will be able to modify during simulation.
+-->
 
 
-```@repl ex01
-trn = HorizontalTerrain(altitude = h_LOWS15)
-```
-
-, and the runway's geographic heading
-ψ_LOWS15 = deg2rad(157)
-```@repl ex01
-atm = SimpleAtmosphere()
-```
-
-This is a terrain model with constant orthometric altitude.
-
-
-
-
-Explain what XPlane12Output does.
-
-!!! note
-
-    The X-Plane 12 demo is time-limited to 15 minutes. After that, an on-screen pop-up will appear. To
-    get rid of it, you can restart X-Plane and click on *Resume Last Flight*. You will then need to
-    abort the Julia simulation and run it again (we will see how to do this shortly).
-
-
-
-The ```FlightCore.Joysticks``` module provides a joystick interface layer via [SDL2_jll]
-(https://github.com/JuliaBinaryWrappers/SDL2_jll.jl). Currently, Thrustmaster's T.16000M is the only
-supported model. Adding support for other joysticks is relatively straightforward, but we are not be
-getting into that in this example. If you happen to have a T.16000M available, you can plug it in
-now and do the following:
-
-Otherwise, don't worry. For this example, the SAS and autopilot modes will do most of the flying for
-us, so you can easily control the aircraft through the GUI.
-
-!!! note "X-Plane UDP Settings"
-
-    By default, the ```XPlane12Output``` constructor assumes X-Plane 12 is running on your local machine
-    and listening on port 49000. If this is not the case, you should provide the appropriate IP address
-    and port via keyword arguments. For example:
-
-    ```@repl
-    using Flight
-    using Sockets #bring IPv4 into scope
-    xp = XPlane12Output(address = IPv4("192.168.1.2"), port = 49001)
-    ```
-
-
-
-<!-- Along the way, we will briefly introduce/touch upon some key concepts in the Flight.jl package. -->
+Now attach an XPlane12Output. Explain what it does. Controls XPlane via UDP. Disables X-Plane's
+physics on initialization. During simulation, it will periodically send our aircraft's state to XPlane
