Changed Simulation's default t_end, more work on documentation

--- a/docs/src/examples/ex01.md
+++ b/docs/src/examples/ex01.md
@@ -62,53 +62,104 @@ entry in the table and enable the *Show in cockpit* option.
 
 ![X-Plane 12 Data Output](xp12_data_output.png)
 
-We are done setting up X-Plane, now let's move on to Julia.
+This concludes our X-Plane setup, now let's move on to Julia.
 
 
 ### Setting Up the ```Flight.jl``` Simulation
 
-Let's begin by initializing the package:
-```@repl ex01
+First, let's initialize the package:
+```@example ex01
 using Flight
 ```
 
-Next, let's define the 2D location and orthometric elevation for the beginning of Salzburg airport's
-runway 15, and the runway's geographic heading:
-```@repl ex01
+Next, we define a 2D location and orthometric elevation for the beginning of Salzburg airport's
+runway 15, as well as the runway's geographic heading:
+```@example ex01
 loc_LOWS15 = LatLon(ϕ = deg2rad(47.80433), λ = deg2rad(12.997))
 h_LOWS15 = HOrth(427.2)
 ψ_LOWS15 = deg2rad(157)
+nothing # hide
 ```
 
 !!! note
 
     These values will result in X-Plane displaying the aircraft properly positioned and aligned
     on the runway centerline at the beginning of the simulation. However, this is just for appearance,
-    since our physics model is completely independent from X-Plane's terrain mesh. This disconnect will
+    since our simulation's physics are totally independent from X-Plane's terrain mesh. This disconnect will
     become apparent as soon as the aircraft starts rolling down the runway.
 
-Our simulated world will consist of an aircraft model, an atmospheric model, and a terrain model:
+Our simulated world will consist of an aircraft, an atmospheric model and a terrain model:
 
-```@repl ex01
+```@example ex01
 aircraft = Cessna172Xv1()
-atmosphere = SimpleAtmosphere() #basic ISA-based model with adjustable sea-level conditions and wind velocity
-terrain = HorizontalTerrain(altitude = h_LOWS15) #flat terrain model with constant orthometric elevation
+atmosphere = SimpleAtmosphere()
+terrain = HorizontalTerrain(altitude = h_LOWS15)
 world = SimpleWorld(aircraft, atmosphere, terrain)
+nothing # hide
 ```
 
 The ```Cessna172Xv1``` aircraft is a hypothetical customization of a Cessna 172S. It replaces the
 reversible actuation system on the base model with a digital fly-by-wire flight control system,
 which we will leverage in this example. Note that this aircraft does not aim to replicate the
 internals or interface of any specific real-world autopilot. Its main purpose is simply to
-illustrate how the ```Flight.jl``` framework can be used to design, implement and test advanced control architectures.
+illustrate how the ```Flight.jl``` framework can be used to design, implement and test complex
+control architectures.
 
-We can now create the simulation itself. We'll specify reasonable values for the integration step
-size and simulation length:
-<!-- ```@repl ex01
-sim = Simulation(world; dt = 0.01, t_end = 1000)
+```SimpleAtmosphere``` provides a basic,
+[ISA](https://en.wikipedia.org/wiki/International_Standard_Atmosphere)-based atmospheric model with
+customizable sea-level conditions and wind velocity. ```HorizontalTerrain``` is a terrain model with
+constant orthometric elevation, which we have set to our previous value for the beginning of runway
+15\.
+
+Now we can create our simulation, specifying a suitable integration step size:
+```@example ex01
+sim = Simulation(world; dt = 0.01)
+nothing # hide
 ```
--->
+
+Next, we instantiate an X-Plane 12 control interface and attach it to the simulation. This will
+allow the simulation to disable X-Plane's physics engine and periodically send our aircraft's state
+for X-Plane to display:
+```@example ex01
+xp = XPlane12Control()
+Sim.attach!(sim, xp)
+nothing # hide
+```
+
+!!! note "X-Plane UDP Settings"
+
+    The default ```XPlane12Control``` constructor assumes X-Plane 12 is running on your local machine
+    and listening on port 49000. If this is not the case, you will need to provide the appropriate IP address and/or
+    port, discussed during X-Plane setup, as keyword arguments. For example:
+
+    ```@example
+    using Flight # hide
+    using Sockets #bring IPv4 into scope
+    xp = XPlane12Control(address = IPv4("192.168.1.2"), port = 49001)
+    nothing # hide
+    ```
+
+The ```Flight.jl``` framework provides a joystick interface layer via [SDL2_jll]
+(https://github.com/JuliaBinaryWrappers/SDL2_jll.jl). Currently, Thrustmaster's T.16000M is the only
+implemented model. Adding support for other joysticks is relatively straightforward, but we will not
+get into it in this example. If you happen to have a T.16000M available, you can plug it in now and
+do the following:
+
+**TODO**
+
+Otherwise, don't worry. In this example, the SAS and autopilot modes will do most of the flying for
+us, so you can control the aircraft through the GUI.
+
+The last step before running the simulation is to define and assign a suitable initial condition.
+For on-ground initialization, we can do that by specifying the aircraft frame's initial kinematic
+state as follows:
+
+!!! note "Demo Time Limit"
+
+    The X-Plane 12 demo is time-limited to 15 minutes. After that, an on-screen pop-up will appear. To
+    get rid of it, you can restart X-Plane and click on *Resume Last Flight*. You will then need to
+    abort the Julia simulation and run it again (we will see how to do this shortly).
 
 
-Now attach an XPlane12Output. Explain what it does. Controls XPlane via UDP. Disables X-Plane's
-physics on initialization. During simulation, it will periodically send our aircraft's state to XPlane
+**TODO: Maybe add on-air initialization**
+**TODO: Installation notes on dedicated documentation section. Mention Revise**
