More work on example 1, a few other tweaks

--- a/docs/src/examples/ex01.md
+++ b/docs/src/examples/ex01.md
@@ -26,7 +26,7 @@ happen to have the full version, you can use it instead. Since we will be using 
 external visualization tool, we only need to set up a few things; for further help, check out the
 [X-Plane 12 manual](https://www.x-plane.com/manuals/desktop/).
 
-!!! note
+!!! note "No X-Plane?"
 
     If you can't run X-Plane 12 (which might happen for instance if you have an Intel integrated
     graphics chip), you can skip this section. Your visuals will be limited to the built-in GUI, but
@@ -81,7 +81,7 @@ h_LOWS15 = HOrth(427.2)
 nothing # hide
 ```
 
-!!! note
+!!! note "Keeping Appearances"
 
     These values will result in X-Plane displaying the aircraft properly positioned and aligned
     on the runway centerline at the beginning of the simulation. However, this is just for appearance,
@@ -129,8 +129,8 @@ nothing # hide
 !!! note "X-Plane UDP Settings"
 
     The default ```XPlane12Control``` constructor assumes X-Plane 12 is running on your local machine
-    and listening on port 49000. If this is not the case, you will need to provide the appropriate IP address and/or
-    port, discussed during X-Plane setup, as keyword arguments. For example:
+    and listening on port 49000. If this is not the case, you will need to provide the appropriate IP
+    address and/or port (discussed in the X-Plane setup section) as keyword arguments. For example:
 
     ```@example
     using Flight # hide
@@ -142,17 +142,44 @@ nothing # hide
 The ```Flight.jl``` framework provides a joystick interface layer via [SDL2_jll]
 (https://github.com/JuliaBinaryWrappers/SDL2_jll.jl). Currently, Thrustmaster's T.16000M is the only
 implemented model. Adding support for other joysticks is relatively straightforward, but we will not
-get into it in this example. If you happen to have a T.16000M available, you can plug it in now and
-do the following:
+get into it here. If you happen to have a T.16000M available, you can plug it in now and do the
+following:
 
-**TODO**
+```@example ex01
+for joystick in update_connected_joysticks()
+    isa(joystick, Joysticks.T16000M) && Sim.attach!(sim, joystick)
+end
+```
 
-Otherwise, don't worry. In this example, the SAS and autopilot modes will do most of the flying for
-us, so you can control the aircraft through the GUI.
+Otherwise, don't worry; in this example, you can let the SAS and autopilot modes handle the aircraft
+for you, so you can easily control it through the GUI.
 
-The last step before running the simulation is to define and assign a suitable initial condition.
-For on-ground initialization, we can do that by specifying the aircraft frame's initial kinematic
-state as follows:
+The last step is to define a suitable initial condition. For on-ground initialization, we can do
+that by specifying the aircraft's body frame kinematic state:
+
+```@example ex01
+init_gnd = KinInit(;
+    loc = loc_LOWS15, #2D location
+    h = h_LOWS15 + C172.Δh_to_gnd, #altitude, as an offset with respect to ground elevation
+    q_nb = REuler(ψ_LOWS15, 0, 0), #attitude with respect to NED frame, as Euler angles
+    ω_wb_b = zeros(3), #angular velocity with respect to local tangent frame, aircraft frame coordinates
+    v_eb_n = zeros(3), #Earth-relative velocity, NED frame coordinates
+    )
+nothing # hide
+```
+
+And then we assign it as:
+```@example ex01
+Sim.init!(sim, init_gnd)
+```
+
+Now we can finally start the simulation.
+
+### Running the Simulation
+
+```julia
+Sim.run_interactive!(sim)
+```
 
 !!! note "Demo Time Limit"
 
@@ -160,6 +187,6 @@ state as follows:
     get rid of it, you can restart X-Plane and click on *Resume Last Flight*. You will then need to
     abort the Julia simulation and run it again (we will see how to do this shortly).
 
-
 **TODO: Maybe add on-air initialization**
+
 **TODO: Installation notes on dedicated documentation section. Mention Revise**
